--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@ Design Conference (ISOCC), South Korea, pp. 85-86, 2023.
                         El-Shafai(2020). 
                         <i> A Novel Hybrid Cryptosystem for Secure Streaming of High Efficiency H.265 Compressed
                             Videos in IoT
-                            Multimedia Applications </i> IEEE Access,8,128548-128573
+                            Multimedia Applications </i>, IEEE Access,8,128548-128573
                     </td>
                     
 
@@ -918,7 +918,7 @@ Design Conference (ISOCC), South Korea, pp. 85-86, 2023.
                     <td>Fawad Masood, Wadii Boulila, Jawad Ahmad, A Arshad, Syam Sankar, Saeed Rubaiee, William J.
                         Buchanan, (2020). <i> A Novel Privacy Approach of Digital Aerial Images Based on Mersenne
                             Twister
-                            Method with DNA Genetic Encoding and Chaos</i>.  Remote Senisng,12(11), 1893 
+                            Method with DNA Genetic Encoding and Chaos</i>,  Remote Senisng,12(11), 1893 
                             MDPI
 
 
@@ -1193,5 +1193,6 @@ Design Conference (ISOCC), South Korea, pp. 85-86, 2023.
 
 
 </body>
+
 
 </html>
